--- a/webpack_config/package.json
+++ b/webpack_config/package.json
@@ -4,26 +4,31 @@
   "description": "webpack test ",
   "main": "webpack.config.js",
   "dependencies": {
-    "file-loader": "^0.11.2",
-    "postcss-cssnext": "^2.11.0",
-    "postcss-import": "^10.0.0",
-    "postcss-loader": "^2.0.6",
-    "url-loader": "^0.5.9"
+    "es5-shim": "^4.5.9",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "bootstrap": "^3.3.7",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.22.0",
+    "babel-runtime": "^6.23.0",
     "css-loader": "^0.28.0",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
-    "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
+    "url-loader": "^0.5.9",
     "webpack": "^2.3.2",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^2.4.5",
